fixes budget table overflow issues (for wide table/lots of visits)

--- a/css/budget.css
+++ b/css/budget.css
@@ -1,11 +1,14 @@
 /* zebra stripe colors: https://coolors.co/FFFFFF-F2FBFF-c2edff-A6E0FF */
+#budgetTable {
+	max-width: 1200px;
+	overflow: auto;
+}
 #budget_table {
 	display: flex;
 	flex-direction: column;
 	/* align-items: center; */
 	/* justify-content: center; */
 	padding: 16px;
-	overflow: scroll;
 }
 #pagecontainer {
 	max-width: 1200px;
